# cpp-serializer-generator

./: .gitignore  CMakeLists.txt  README.md  serializer-generator.cmake
src/: ASTParser.cpp  ASTParser.hpp  CMakeLists.txt  CodeGenerator.cpp  Json.cpp  Json.hpp  Main.cpp  Serializer.hpp.template  SerializerTemplate.cpp  generate-serializer-template.sh
test/: CMakeLists.txt  Serializer.cpp  Serializer.hpp  anotherfile.cpp  anotherfile.hpp  main.cpp  test.cpp  test.h
